--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.7.0",
+    "lodash": "^4.17.21",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-modal": "^3.16.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
