--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "stripe": "^14.12.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
