--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
     "firebase": "^10.7.0",
     "lodash": "^4.17.21",
     "next": "13.5.6",
